<?xml version="1.0"?>
<package format="2">
  <name>scout</name>
  <version>0.0.0</version>
  <description>The scout package</description>
  <maintainer email="r.nyukhalov@gmail.com">Roman Niukhalov</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python3-catkin-pkg</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Python dependencies -->
  <exec_depend>python3-pygame</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-shapely</exec_depend>
  <exec_depend>python3-networkx</exec_depend>

  <!-- Messages -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
