<?xml version="1.0"?>
<package format="2">
  <name>scout</name>
  <version>0.0.0</version>
  <description>The scout package</description>
  <maintainer email="r.nyukhalov@gmail.com">Roman Niukhalov</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>python3-catkin-pkg</buildtool_depend>

  <!-- Other packages -->
  <depend>joy</depend>
  <!-- <depend>ydlidar</depend> -->
  <!-- <depend>realsense2_camera</depend> -->
  <!-- <depend>imu_filter_madgwick</depend> -->
  <!-- <depend>robot_localization</depend> -->
  <!-- <depend>rtabmap_ros</depend> -->

  <!-- Misc -->
  <depend>rospy</depend>
  <depend>roslaunch</depend>

  <!-- Messages -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- Python dependencies -->
  <depend>python3-pygame</depend>
  <depend>python3-numpy</depend>
  <depend>python3-yaml</depend>
  <depend>python3-serial</depend>
  <exec_depend>ds4drv-pip</exec_depend>
  <!-- <depend>python3-shapely</depend> -->
  <!-- <depend>python3-networkx</depend> -->

  <export>
  </export>
</package>
